--- a/css/styles.css
+++ b/css/styles.css
@@ -266,6 +266,7 @@ margin-top: -30px;
 }
 .team{
   background-color: var(--background-grey);
+  margin: -34px -8px -8px -8px;
 }
 .team-h{
   padding-top: 94px;
