--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,11 @@ h1, h2, h3, h4, h5, h6, p{
   margin: 0 auto;
   padding: 0 15px;
 }
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 /* шапка */
 .header{
   display: flex;
@@ -97,7 +102,7 @@ h1, h2, h3, h4, h5, h6, p{
 /* main */
 .biznes{
   padding-top: 200px;
-  padding-bottom: 280px;
+  padding-bottom: 200px;
   background-color: var(--background-black);
   text-align: center;
 }
@@ -133,6 +138,10 @@ height: 50px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
+.benefits{
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 .benefits-ul {
   list-style: none;
 }
@@ -149,11 +158,10 @@ height: 50px;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  margin-top: 10px;
 }
 .benefits-ul{
   display: flex;
-  margin-top: 94px;
-  margin-bottom: 94px;
 }
 .benefits-ul-li:not(:last-child) {
   margin-right: 30px;
@@ -185,6 +193,10 @@ height: 50px;
   text-align: center;
   color: var(--black-color);
 }
+.card-info{
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
 .team-li-h {
   font-weight: 500;
   font-size: 16px;
@@ -192,7 +204,6 @@ height: 50px;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--black-color);
-  padding-top: 30px;
   padding-bottom: 10px;
 }
 .team-li-p {
@@ -201,19 +212,18 @@ height: 50px;
   line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
-  padding-bottom: 30px;
 }
 .team{
   background-color: var(--background-grey);
+  padding-bottom: 94px;
+  padding-top: 94px;
 }
 .team-h{
-  padding-top: 94px;
   margin-bottom: 50px;
 text-align: center;
 }
 .team-ul{
   display: flex;
-  padding-bottom: 94px;
   margin: 0;
 }
 .team-li:not(:last-child) {
@@ -253,6 +263,7 @@ border-radius: 0px 0px 4px 4px;
   color: var(--white-color);
   font-style: normal;
   margin-top: 20px;
+  margin-bottom: 9px;
 }
 
 .footer-mail {
@@ -263,7 +274,6 @@ border-radius: 0px 0px 4px 4px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--color-a-grey);
-    margin-top: 9px;
 }
 .footer-tel {
   font-style: normal;
@@ -273,7 +283,6 @@ border-radius: 0px 0px 4px 4px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--color-a-grey);
-  margin-top: 9px;
 }
 .footer-mail:hover,
 .footer-mail:focus {
@@ -284,6 +293,10 @@ border-radius: 0px 0px 4px 4px;
   color: var(--blue-color);
 }
 /* портфолио */
+.global-box{
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 .filter-button {
   font-family: "Roboto";
   font-weight: 500;
@@ -314,7 +327,6 @@ border-radius: 0px 0px 4px 4px;
   padding-top: 0;
   justify-content: center;
   margin: 0px;
-  margin-top: 94px;
   margin-bottom: 50px;
 }
 
@@ -331,10 +343,6 @@ border-radius: 0px 0px 4px 4px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--black-color);
-  padding-top: 20px;
-  padding-bottom: 4px;
-  padding-left: 24px;
-  padding-right: 24px;
 }
 .projects-li-p {
   font-weight: 400;
@@ -342,11 +350,11 @@ border-radius: 0px 0px 4px 4px;
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: var(--grey-color);
-  padding-bottom: 20px;
-  padding-left: 24px;
-  padding-right: 24px;
 }
 .projects-li{
   border: 1px solid var(--background-grey)
+}
+.projects-info{
+  padding: 20px 24px 20px 24px;
 }
 
